--- a/src/_includes/partials/components/nav.njk
+++ b/src/_includes/partials/components/nav.njk
@@ -1,6 +1,7 @@
 {% if navigation.items %}
   <nav class="nav">
     <ul class="[ nav__list ] [ box-flex align-center md:space-before ]">
+    <li class="nav__item"><a href="/">Home</a></li>  
       {% for item in navigation.items %}
         {% set relAttribute = '' %}
         {% set currentAttribute = '' %}
@@ -14,7 +15,7 @@
         {% endif %}
 
         <li class="nav__item">
-          <a href="{{ item.url }}"{{ relAttribute | safe }}{{ currentAttribute | safe }}>{{ item.text }}</a>
+          <a href="{{ item.url }}"{{ relAttribute | safe }}{{ currentAttribute | safe }} target="_blank">{{ item.text }}</a>
         </li>
       {% endfor %}
     </ul>
