Add course link

--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -18,6 +18,12 @@
       {% include "partials/components/intro.njk" %}
       <div class="[ post__body ] [ inner-wrapper ] [ leading-loose pad-top-900 {{ 'pad-bottom-900' if not site.enableThirdPartyComments }} text-500 ] [ sf-flow ] [ e-content ]">
         {{ content | safe }}
+        <hr />
+        Do you want to Learn JavaScript step by step?  <br/>
+        Checkout my interactive course where you read short lessons, solve challenges in the browser and recap topics with Flashcads:  <br/>
+        <div style="text-align: center; margin-bottom: 50px;">
+          <a href="https://learnjavascript.online/?utm_source=blog" style="font-weight: bold;border-radius: 3px;padding: 0.4em 0.6em;" target="_blank" rel="noopener">Learn JavaScript</a>
+        </div>
       </div>
       {% if site.enableThirdPartyComments %}
         <hr />
