--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -20,7 +20,7 @@
         {{ content | safe }}
         <hr />
         Do you want to Learn JavaScript step by step?  <br/>
-        Checkout my interactive course where you read short lessons, solve challenges in the browser and recap topics with Flashcads:  <br/>
+        Checkout my interactive course where you read short lessons, solve challenges in the browser and recap topics with Flashcards:  <br/>
         <div style="text-align: center; margin-bottom: 50px;">
           <a href="https://learnjavascript.online/?utm_source=blog" style="font-weight: bold;border-radius: 3px;padding: 0.4em 0.6em;" target="_blank" rel="noopener">Learn JavaScript</a>
         </div>
