--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -39,7 +39,7 @@
               <ul class="[ nav__list ] [ box-flex align-center pad-left-400 ] [ p-category ]">
                 {% for item in tags %}
                   <li class="nav__item">
-                    <a href="/tags/{{ item }}">{{ item }}</a>
+                    <a href="/tags/{{ item }}/">{{ item }}</a>
                   </li>
                 {% endfor %}
               </ul>
