--- a/src/_includes/partials/global/site-foot.njk
+++ b/src/_includes/partials/global/site-foot.njk
@@ -19,5 +19,6 @@
         Powered by the <a href="https://hylia.website" rel="external">Hylia Eleventy Starter Kit v{{ pkg.version }}</a>.
       </p>
     {% endif %}
+    <p id="js-disclaimer"><small>JavaScript is a trademark of Oracle Corporation in the US. We are not endorsed by or affiliated with Oracle.</small></p>
   </div>
 </footer>
