--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -6,7 +6,7 @@
 {% set introSummary %}
 <p class="[ intro__meta ] [ text-500 leading-tight ]">
   {% if date %}
-    <time datetime="{{ date | w3DateFilter }}" class="dt-published">{{ date | dateFilter }}</time>
+    <time itemprop="dateModified" datetime="{{ date | w3DateFilter }}" class="dt-published">{{ date | dateFilter }}</time>
   {% endif %}
   <span>— {{ helpers.getReadingTime(content) }} minute read</span>
 </p>
